Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,12 @@
     line-height: 1.5;
     width: 100%
   }
+
+  p.skill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  };
   
   p,
   li {
@@ -230,6 +236,8 @@
   p {
     margin: 0;
   }
+
+  
   
   /* then can set the margin & paddings for any element */
   header {
@@ -494,6 +502,9 @@
     color:#FFFFFF;
   }
   
+  i .fab fa-linkedin-in {
+    color: #ffffff; 
+  };
   
   
   /* ==========================================================================
